# chip8emulator

./: .gitignore  CMakeLists.txt  README.md  SDLearn.sln
SDLearn/: CMakeLists.txt  Chip8.cpp  Chip8.hpp  Platform.h  SDLearn.cpp  SDLearn.vcxproj  main.cpp
SDLearn/x64/Debug/: SDLearn.exe.recipe  SDLearn.ilk  vc143.idb
SDLearn/x64/Debug/SDLearn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SDLearn.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
SDLearn/x64/Release/SDLearn.tlog/: CL.command.1.tlog  SDLearn.lastbuildstate
chip8/: CMakeLists.txt  Chip8.cpp  Chip8.hpp  Platform.h  SDLearn.vcxproj.filters  main.cpp
